add imx mint func
